--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Super Carwash</title>
+	<title>Super Carwash2</title>
 	<link rel="icon" type="image/png" href="../carwash2/media/image/carwash_favicon.png">
 
 	<!-- Application components -->
