forsitasok meg par aprosag

--- a/html/header.html
+++ b/html/header.html
@@ -23,7 +23,7 @@
 				 ui-sref-active="active"
 				 data-bs-toggle="collapse" 
 				 data-bs-target=".navbar-collapse.show">
-				 <img class="navbar-png" src="./media/image/navbar_png.png" alt="CarWash">
+				 <img class="navbar-png" src="/media/image/car-wash-logo_575769-19.jpg" alt="CarWash">
 
 				</a>
 
@@ -120,7 +120,7 @@
 								 ui-sref-active="active">
 								<i class="fa-solid fa-right-to-bracket me-1"></i>
 								<span class="text-capitalize text-small-caps">
-									bejelenkezés
+									bejelentkezés
 								</span>
 							</a>
 						</li>
@@ -175,7 +175,7 @@
 								 ng-click="$root.logout()">
 								<i class="fa-solid fa-right-from-bracket me-1"></i>
 								<span class="text-capitalize text-small-caps">
-									kijelenkezés
+									kijelentkezés
 								</span>
 							</a>
 						</li>
