--- a/html/register.html
+++ b/html/register.html
@@ -21,8 +21,7 @@
 								class="col-form-label col-12 col-md-5 text-md-end">
 						<i class="fa-solid fa-user fa-2xl me-1"></i>
 						<i class="fa-solid fa-star fa-2xs text-danger"></i>
-						<span class="text-capitalize">first</span>
-						<span>name:</span>
+						<span class="text-capitalize">Keresztnév</span>
 					</label>
 					<div class="col-11 col-md-6 position-relative">
 						<input id="register-first_name"
@@ -50,8 +49,8 @@
 				<div class="row mb-3">
 					<label for="register-middle_name" 
 								class="col-form-label col-12 col-md-5 text-md-end">
-						<span class="text-capitalize">middle</span>
-						<span>name:</span>
+						<span class="text-capitalize">középső</span>
+						<span>név:</span>
 					</label>
 					<div class="col-11 col-md-6 position-relative">
 						<input id="register-middle_name"
@@ -73,8 +72,7 @@
 					<label for="register-last_name" 
 								class="col-form-label col-12 col-md-5 text-md-end">
 						<i class="fa-solid fa-star fa-2xs text-danger"></i>
-						<span class="text-capitalize">last</span>
-						<span>name:</span>
+						<span class="text-capitalize">Vezetéknév:</span>
 					</label>
 					<div class="col-11 col-md-6 position-relative">
 						<input id="register-last_name"
@@ -104,7 +102,7 @@
 								class="col-form-label col-12 col-md-5 text-md-end">
 						<i class="fa-solid fa-star fa-2xs text-danger"></i>
 						<i class="fa-solid fa-calendar-days me-1"></i>
-						<span class="text-capitalize">born:</span>
+						<span class="text-capitalize">Születési idő:</span>
 					</label>
 					<div class="col-11 col-md-6 position-relative">
 						<input id="register-born"
@@ -131,7 +129,7 @@
 						<span data-bs-toggle="tooltip"
 									data-bs-custom-class="custom-tooltip"
 									data-bs-html="true"
-									data-bs-title="&lt;p class='my-1'>Only people over 16 years old can be register!&lt;/p>">
+									data-bs-title="&lt;p class='my-1'>Csak 16 éven felüliek regisztrálhatnak!&lt;/p>">
 							<i class="fa-solid fa-circle-info text-primary ms-2"></i>
 						</span>
 					</div>
@@ -143,7 +141,7 @@
 						<i class="fa-solid fa-star fa-2xs text-danger"></i>
 						<i class="fa-solid fa-venus-mars me-1"></i>
 						<span class="text-capitalize">
-							gender:
+							Neme:
 						</span>
 					</legend>
 					<div class="col-11 col-md-6 position-relative d-flex align-items-center"
@@ -177,7 +175,7 @@
 								class="col-form-label col-12 col-md-5 text-md-end">
 						<i class="fa-solid fa-star fa-2xs text-danger"></i>
 						<i class="fa-solid fa-envelope me-1"></i>
-						<span class="text-capitalize">email:</span>
+						<span class="text-capitalize">E-mail:</span>
 					</label>
 					<div class="col-11 col-md-6 position-relative">
 						<input id="register-email"
@@ -203,7 +201,7 @@
 						<span data-bs-toggle="tooltip"
 									data-bs-custom-class="custom-tooltip"
 									data-bs-html="true"
-									data-bs-title="&lt;p class='my-1'>The email address verification is required!&lt;/p>">
+									data-bs-title="&lt;p class='my-1'>Az email cím megerősítése kötelező!&lt;/p>">
 							<i class="fa-solid fa-circle-info text-primary ms-2"></i>
 						</span>
 					</div>
@@ -215,7 +213,7 @@
 								class="col-form-label col-12 col-md-5 text-md-end">
 						<i class="fa-solid fa-star fa-2xs text-danger"></i>
 						<i class="fa-regular fa-envelope me-1"></i>
-						<span class="text-capitalize">confirm:</span>
+						<span class="text-capitalize">megerősítés:</span>
 					</label>
 					<div class="col-11 col-md-6 position-relative">
 						<input id="register-emailConfirm"
@@ -242,7 +240,7 @@
 						<span data-bs-toggle="tooltip"
 									data-bs-custom-class="custom-tooltip"
 									data-bs-html="true"
-									data-bs-title="&lt;p class='my-1'>Please re-enter your email address for security!&lt;/p>">
+									data-bs-title="&lt;p class='my-1'>Kérjük, adja meg újra az email címét a biztonság érdekében!&lt;/p>">
 							<i class="fa-solid fa-circle-info text-primary ms-2"></i>
 						</span>
 					</div>
@@ -254,7 +252,7 @@
 								class="col-form-label col-12 col-md-5 text-md-end">
 						<i class="fa-solid fa-star fa-2xs text-danger"></i>
 						<i class="fa-solid fa-key me-1"></i>
-						<span class="text-capitalize">password:</span>
+						<span class="text-capitalize">jelszó:</span>
 					</label>
 					<div class="col-11 col-md-6 position-relative">
 						<input id="register-password"
@@ -282,7 +280,7 @@
 									data-bs-custom-class="custom-tooltip"
 									data-bs-html="true"
 									data-bs-title="&lt;p class='my-1'>6-20 characters&lt;/br>
-																&lt;small>(contains uppercase, lowercase letters and numbers)&lt;/small>&lt;/p>">
+																&lt;small>(tartalmazzon nagybetűket, kisbetűket és számokat)&lt;/small>&lt;/p>">
 							<i class="fa-solid fa-circle-info text-primary ms-2"></i>
 						</span>
 					</div>
@@ -294,7 +292,7 @@
 								class="col-form-label col-12 col-md-5 text-md-end">
 						<i class="fa-solid fa-star fa-2xs text-danger"></i>
 						<i class="fa-solid fa-unlock-keyhole me-1"></i>
-						<span class="text-capitalize">confirm:</span>
+						<span class="text-capitalize">megerősítés:</span>
 					</label>
 					<div class="col-11 col-md-6 position-relative">
 						<input id="register-passwordConfirm"
@@ -322,7 +320,7 @@
 						<span data-bs-toggle="tooltip"
 									data-bs-custom-class="custom-tooltip"
 									data-bs-html="true"
-									data-bs-title="&lt;p class='my-1'>Please re-enter your password for security!&lt;/p>">
+									data-bs-title="&lt;p class='my-1'>Kérjük, adja meg újra a jelszavát a biztonság érdekében!&lt;/p>">
 							<i class="fa-solid fa-circle-info text-primary ms-2"></i>
 						</span>
 					</div>
@@ -339,7 +337,7 @@
 									ng-model="model.register.showPassword">
 						<label for="register-showPassword"
 									class="form-check-label ms-1">
-							Show password
+							Jelszó mutat
 						</label>
 					</div>
 				</div>
@@ -352,7 +350,7 @@
 									class="btn btn-primary w-auto px-5 me-3 text-capitalize"
 									ng-disabled="registerForm.$invalid"
 									ng-click="methods.httpRequest()">
-						registration
+						regisztráció
 					</button>
 				</div>
 			</form>
