--- a/html/login.html
+++ b/html/login.html
@@ -7,7 +7,7 @@
 				<h3 class="text-center">
 					<i class="fa-solid fa-right-to-bracket"></i>
 					<span class="text-capitalize text-small-caps ms-2">
-						bejelenkezés
+						bejelentkezés
 					</span>
 					<h1>{{aaaaa}}</h1>
 				</h3>
@@ -22,7 +22,7 @@
 								class="col-form-label col-12 col-md-5 text-md-end">
 						<i class="fa-solid fa-star fa-2xs text-danger"></i>
 						<i class="fa-solid fa-envelope me-1"></i>
-						<span class="text-capitalize">email:</span>
+						<span class="text-capitalize">e-mail:</span>
 					</label>
 					<div class="col-11 col-md-6 position-relative">
 						<input id="login-email"
@@ -53,7 +53,7 @@
 								class="col-form-label col-12 col-md-5 text-md-end">
 						<i class="fa-solid fa-star fa-2xs text-danger"></i>
 						<i class="fa-solid fa-key me-1"></i>
-						<span class="text-capitalize">password:</span>
+						<span class="text-capitalize">jelszó:</span>
 					</label>
 					<div class="col-11 col-md-6 position-relative">
 						<input id="login-password"
@@ -98,7 +98,7 @@
 									ng-model="model.showPassword">
 						<label for="login-showPassword"
 									class="form-check-label ms-1">
-							Show password
+							Jelszó mutat
 						</label>
 					</div>
 				</div>
@@ -109,7 +109,7 @@
 									class="btn btn-primary w-auto px-5 me-3 text-capitalize"
 									ng-disabled="loginForm.$invalid"
 									ng-click="methods.login()">
-						login
+						Bejelentkezés
 					</button>
 				</div>
 			</form>
