--- a/html/header.html
+++ b/html/header.html
@@ -23,7 +23,7 @@
 				 ui-sref-active="active"
 				 data-bs-toggle="collapse" 
 				 data-bs-target=".navbar-collapse.show">
-				 <img class="navbar-png" src="/media/image/car-wash-logo_575769-19.jpg" alt="CarWash">
+				 Super Car Wash
 				</a>
 
 			<!-- Navbar content LEFT -->
@@ -50,7 +50,7 @@
 						 ui-sref-active="active"
 						 data-bs-toggle="collapse" 
 						 data-bs-target=".navbar-collapse.show">
-						<i class="fa-solid fa-truck-fast me-1"></i>
+						<i class="bi bi-car-front"></i>
 						<span >
 							Szolgáltatások
 						</span>
@@ -64,7 +64,7 @@
 						 ui-sref-active="active"
 						 data-bs-toggle="collapse" 
 						 data-bs-target=".navbar-collapse.show">
-						<i class="fa-solid fa-ghost me-1"></i>
+						<i class="bi bi-info-circle-fill"></i>
 						<span>
 							Rólunk
 						</span>
