--- a/html/footer.html
+++ b/html/footer.html
@@ -4,7 +4,7 @@
     <div class="row">
       <!-- About section -->
       <div class="col-md-4 mb-3">
-        <h5 class="fw-bold">About Us</h5>
+        <h5 class="fw-bold">Rólunk</h5>
         <p class="text-justify">
           A Super Car Wash célja, hogy autód a legjobb formáját hozza, miközben
           te egyszerűen és gyorsan élvezheted a prémium szolgáltatásainkat.
