--- a/html/home.html
+++ b/html/home.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row my-5">
-    <h1 class="text-center">Super Car wash</h1>
-    <p class="p-4 text-center fw-bold">
+    <h1 class="text-center fw-bold display-3">Super Car wash</h1>
+    <p class="text-center fs-3">
       Üdvözlünk a Super Car Wash világában, ahol az autód mindig kiemelt
       figyelmet és professzionális törődést kap! Nálunk nemcsak egy egyszerű
       autómosás vár, hanem prémium szolgáltatások, amelyek garantálják, hogy
@@ -10,83 +10,17 @@
       meg, hogy mit jelent az igazi autós luxus!
     </p>
   </div>
-  <div class="row mt-3 mb-4">
-    <div id="carouselExampleCaptions" class="carousel slide">
-      <div class="carousel-indicators">
-        <button
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide-to="0"
-          class="active"
-          aria-current="true"
-          aria-label="Slide 1"
-        ></button>
-        <button
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide-to="1"
-          aria-label="Slide 2"
-        ></button>
-        <button
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide-to="2"
-          aria-label="Slide 3"
-        ></button>
+  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="" class="d-block w-100" alt="...">
       </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img
-            src="../media/image/carousel1_home.png"
-            class="d-block w-100"
-            alt="..."
-          />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
-            <p>Some representative placeholder content for the first slide.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img
-            src="https://dummyimage.com/1600x600"
-            class="d-block w-100"
-            alt="..."
-          />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img
-            src="https://dummyimage.com/1600x600"
-            class="d-block w-100"
-            alt="..."
-          />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Some representative placeholder content for the third slide.</p>
-          </div>
-        </div>
+      <div class="carousel-item">
+        <img src="/media/image/carousel2_home.png" class="d-block w-100" alt="...">
       </div>
-      <button
-        class="carousel-control-prev"
-        type="button"
-        data-bs-target="#carouselExampleCaptions"
-        data-bs-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button
-        class="carousel-control-next"
-        type="button"
-        data-bs-target="#carouselExampleCaptions"
-        data-bs-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
+      <div class="carousel-item">
+        <img src="..." class="d-block w-100" alt="...">
+      </div>
     </div>
   </div>
 </div>
