--- a/html/page1.html
+++ b/html/page1.html
@@ -1,19 +1,31 @@
 <div class="container">
-	<div class="row my-5">
-		<h4 class="text-center">PAGE1</h4>
-	</div>
-	<div class="row justify-content-center">
-		<div class="col-11 col-md-6 col-xxl-4 mb-3" 
-				 ng-repeat="x in [].constructor(12) track by $index">
-			<div class="card">
-				<div class="card-header">
-					{{$index+1}}. Lorem
-				</div>
-				<div class="card-body">
-					<h5 class="card-title">Lorem ipsum dolor</h5>
-					<p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero, accusamus! Mollitia corrupti iure deleniti quaerat. Reprehenderit, debitis distinctio? Molestias quos porro eaque vel iure ipsam corrupti voluptates delectus fugit modi.</p>
-				</div>
-			</div>
-		</div>
-	</div>
+  <div class="row my-5">
+    <h1 class="text-center fw-bold display-3">Szolgáltatásaink</h1>
+    <p class="text-center fs-3">
+      Fedezd fel prémium szolgáltatásainkat, amelyek garantálják autód tökéletes
+      tisztaságát és ápoltságát! Legyen szó gyors külső mosásról, alapos belső
+      takarításról, vagy környezetbarát víz nélküli tisztításról, nálunk
+      megtalálod a számodra ideális csomagot. Válassz, és élvezd a makulátlan
+      végeredményt!
+    </p>
+  </div>
+  <div class="row justify-content-center">
+    <div
+      class="col-11 col-md-6 col-xxl-4 mb-3"
+      ng-repeat="x in [].constructor(12) track by $index"
+    >
+      <div class="card">
+        <div class="card-header">{{$index+1}}. Lorem</div>
+        <div class="card-body">
+          <h5 class="card-title">Lorem ipsum dolor</h5>
+          <p class="card-text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero,
+            accusamus! Mollitia corrupti iure deleniti quaerat. Reprehenderit,
+            debitis distinctio? Molestias quos porro eaque vel iure ipsam
+            corrupti voluptates delectus fugit modi.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
