--- a/html/home.html
+++ b/html/home.html
@@ -13,10 +13,10 @@
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="" class="d-block w-100" alt="...">
+        <img src="../media/image/hero_PN1305_HowOftenWashCar_Header-1.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="/media/image/carousel2_home.png" class="d-block w-100" alt="...">
+        <img src="" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
         <img src="..." class="d-block w-100" alt="...">
