--- a/html/login.html
+++ b/html/login.html
@@ -29,7 +29,7 @@
 									class="form-control"
 									name="email" 
 									type="text"
-									placeholder="email"
+									placeholder="e-mail"
 									spellcheck="false" 
 									autocomplete="off" 
 									required
@@ -58,9 +58,9 @@
 					<div class="col-11 col-md-6 position-relative">
 						<input id="login-password"
 									class="form-control"
-									name="password" 
+									name="jelszó" 
 									type="{{model.showPassword ? 'text' : 'password'}}"
-									placeholder="password"
+									placeholder="jelszó"
 									spellcheck="false" 
 									autocomplete="off" 
 									required
