--- a/html/home.html
+++ b/html/home.html
@@ -13,7 +13,7 @@
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="../media/image/hero_PN1305_HowOftenWashCar_Header-1.jpg" class="d-block w-100" alt="...">
+        <img ng-src="../media/image/hero_PN1305_HowOftenWashCar_Header-1.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
         <img src="" class="d-block w-100" alt="...">
