--- a/html/home.html
+++ b/html/home.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row my-5">
     <h1 class="text-center fw-bold display-3">Super Car wash</h1>
-    <p class="text-center fs-3">
+    <p class="text-center fs-3 San Francisco', Helvetica, Arial, san-serif">
       Üdvözlünk a Super Car Wash világában, ahol az autód mindig kiemelt
       figyelmet és professzionális törődést kap! Nálunk nemcsak egy egyszerű
       autómosás vár, hanem prémium szolgáltatások, amelyek garantálják, hogy
@@ -13,7 +13,6 @@
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img ng-src="../media/image/hero_PN1305_HowOftenWashCar_Header-1.jpg" class="d-block w-100" alt="...">
         <img ng-src="./media/image/hero_PN1305_HowOftenWashCar_Header-1.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
