--- a/html/home.html
+++ b/html/home.html
@@ -10,17 +10,18 @@
       meg, hogy mit jelent az igazi autós luxus!
     </p>
   </div>
-  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+
+  <div class="carousel slide" id="carouselExample" data-bs-ride="carousel">
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img ng-src="./media/image/hero_PN1305_HowOftenWashCar_Header-1.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="" class="d-block w-100" alt="...">
+      <div
+        class="carousel-item"
+        ng-repeat="image in carouselImages"
+        ng-class="{active: $index === 0}">
+        <img
+          ng-src="{{image}}"
+          class="d-block w-100"
+          alt="Slide {{$index + 1}}"
+        />
       </div>
     </div>
   </div>
-</div>
