--- a/html/home.html
+++ b/html/home.html
@@ -1,6 +1,10 @@
 <div class="container">
   <div class="row my-5">
+
+    <!--Home page cím-->
     <h1 class="text-center fw-bold display-3">Super Car wash</h1>
+
+    <!--Home page bemutatkozó szöveg-->
     <p class="text-center fs-3 San Francisco', Helvetica, Arial, san-serif">
       Üdvözlünk a Super Car Wash világában, ahol az autód mindig kiemelt
       figyelmet és professzionális törődést kap! Nálunk nemcsak egy egyszerű
@@ -11,6 +15,7 @@
     </p>
   </div>
 
+  <!--Home page carousel-->
   <div class="carousel slide" id="carouselExample" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div
@@ -19,7 +24,7 @@
         ng-class="{active: $index === 0}">
         <img
           ng-src="{{image}}"
-          class="d-block w-100"
+          class="img-fluid d-block w-100"
           alt="Slide {{$index + 1}}"
         />
       </div>
