oldal halad tovább

--- a/html/home.html
+++ b/html/home.html
@@ -1,32 +1,93 @@
-<div class="container">
-  <div class="row my-5">
-
-    <!--Home page cím-->
-    <h1 class="text-center fw-bold display-3">Super Car wash</h1>
-
-    <!--Home page bemutatkozó szöveg-->
-    <p class="text-center fs-3 San Francisco', Helvetica, Arial, san-serif">
-      Üdvözlünk a Super Car Wash világában, ahol az autód mindig kiemelt
-      figyelmet és professzionális törődést kap! Nálunk nemcsak egy egyszerű
-      autómosás vár, hanem prémium szolgáltatások, amelyek garantálják, hogy
-      járműved ragyogjon, akár egy új autó. Foglalj időpontot gyorsan és
-      könnyedén, válassz a különböző mosási csomagjaink közül, és tapasztald
-      meg, hogy mit jelent az igazi autós luxus!
-    </p>
+<!-- Page Content-->
+<div class="container px-4 px-lg-5">
+  <!-- Heading Row-->
+  <div class="row gx-4 gx-lg-5 align-items-center my-5">
+    <div class="col-lg-7">
+      <!--Home page carousel-->
+      <div class="carousel slide" id="carouselExample" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div
+            class="carousel-item"
+            ng-repeat="image in carouselImages"
+            ng-class="{active: $index === 0}"
+          >
+            <img
+              ng-src="{{image}}"
+              class="img-fluid d-block w-100 border-primary rounded-3"
+              alt="Slide {{$index + 1}}"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-5">
+      <h1 class="fw-bold display-3">Super Car Wash</h1>
+      <p>
+        Üdvözlünk a Super Car Wash világában, ahol az autód mindig kiemelt
+        figyelmet és professzionális törődést kap! Nálunk nemcsak egy egyszerű
+        autómosás vár, hanem prémium szolgáltatások, amelyek garantálják, hogy
+        járműved ragyogjon, akár egy új autó. Foglalj időpontot gyorsan és
+        könnyedén, válassz a különböző mosási csomagjaink közül, és tapasztald
+        meg, hogy mit jelent az igazi autós luxus!
+      </p>
+      <a class="btn btn-primary" href="#!">Foglaljon időpontot most!</a>
+    </div>
   </div>
-
-  <!--Home page carousel-->
-  <div class="carousel slide" id="carouselExample" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div
-        class="carousel-item"
-        ng-repeat="image in carouselImages"
-        ng-class="{active: $index === 0}">
-        <img
-          ng-src="{{image}}"
-          class="img-fluid d-block w-100"
-          alt="Slide {{$index + 1}}"
-        />
+  <!-- Call to Action-->
+  <div class="card text-white bg-secondary my-5 py-4 text-center">
+    <div class="card-body">
+      <p class="text-white m-0">
+        This call to action card is a great place to showcase some important
+        information or display a clever tagline!
+      </p>
+    </div>
+  </div>
+  <!-- Content Row-->
+  <div class="row gx-4 gx-lg-5">
+    <div class="col-md-4 mb-5">
+      <div class="card h-100">
+        <div class="card-body">
+          <h2 class="card-title">Card One</h2>
+          <p class="card-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni
+            quas ex numquam, maxime minus quam molestias corporis quod, ea
+            minima accusamus.
+          </p>
+        </div>
+        <div class="card-footer">
+          <a class="btn btn-primary btn-sm" href="#!">More Info</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4 mb-5">
+      <div class="card h-100">
+        <div class="card-body">
+          <h2 class="card-title">Card Two</h2>
+          <p class="card-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod
+            tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt
+            quam eaque, vel, non in id dolore voluptates quos eligendi labore.
+          </p>
+        </div>
+        <div class="card-footer">
+          <a class="btn btn-primary btn-sm" href="#!">More Info</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4 mb-5">
+      <div class="card h-100">
+        <div class="card-body">
+          <h2 class="card-title">Card Three</h2>
+          <p class="card-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni
+            quas ex numquam, maxime minus quam molestias corporis quod, ea
+            minima accusamus.
+          </p>
+        </div>
+        <div class="card-footer">
+          <a class="btn btn-primary btn-sm" href="#!">More Info</a>
+        </div>
       </div>
     </div>
   </div>
+</div>
