--- a/html/footer.html
+++ b/html/footer.html
@@ -1,6 +1,6 @@
 <!-- Footer -->
-<footer class="footer-custom navbar navbar-expand-sm text-white">
-  <div class="container py-4">
+<footer class="footer-custom navbar navbar-expand-sm text-white mt-5">
+  <div class="container py-2">
     <div class="row">
       <!-- About section -->
       <div class="col-md-4 mb-3">
