--- a/html/home.html
+++ b/html/home.html
@@ -1,8 +1,11 @@
 <!-- Page Content-->
 <div class="container px-4 px-lg-5">
+
+
   <!-- Heading Row-->
   <div class="row gx-4 gx-lg-5 align-items-center my-5">
     <div class="col-lg-7">
+      
       <!--Home page carousel-->
       <div class="carousel slide" id="carouselExample" data-bs-ride="carousel">
         <div class="carousel-inner">
@@ -30,18 +33,26 @@
         könnyedén, válassz a különböző mosási csomagjaink közül, és tapasztald
         meg, hogy mit jelent az igazi autós luxus!
       </p>
-      <a class="btn btn-primary" href="#!">Foglaljon időpontot most!</a>
+      <a class="btn btn-warning" href="#!">Foglaljon időpontot most!</a>
     </div>
   </div>
-  <!-- Call to Action-->
+
+
+  <!-- Content card-->
   <div class="card text-white bg-secondary my-5 py-4 text-center">
     <div class="card-body">
-      <p class="text-white m-0">
-        This call to action card is a great place to showcase some important
-        information or display a clever tagline!
-      </p>
+      <div class="row justify-content-center">
+        <div class="col-md-4 col-sm-6 text-center mb-3" ng-repeat="item in infoList">
+          <i class="{{item.icon}} fa-3x text-light mb-3"></i>
+          <h5 class="text-white">{{item.title}}</h5>
+          <p class="text-white text-justify m-0">{{item.description}}</p>
+        </div>
+      </div>
     </div>
   </div>
+  
+  
+
   <!-- Content Row-->
   <div class="row gx-4 gx-lg-5">
     <div class="col-md-4 mb-5">
