--- a/html/footer.html
+++ b/html/footer.html
@@ -34,10 +34,10 @@
       <div class="col-md-4 mb-3">
         <h5 class="fw-bold">Kapcsolat</h5>
         <p>
-          <i class="fa-solid fa-location-dot me-2"></i>Szeged, Szőregi út 80.
+          <i class="fa-solid fa-location-dot me-2"></i>Makó, Habfürdő utca 6.
         </p>
         <p><i class="fa-solid fa-phone me-2"></i>+36 30 610 0666</p>
-        <p><i class="fa-solid fa-envelope me-2"></i>info@supercarwash.com</p>
+        <p><i class="fa-solid fa-envelope me-2"></i>info@supercarwash.hu</p>
       </div>
     </div>
 
