--- a/html/footer.html
+++ b/html/footer.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="footer-custom navbar navbar-expand-sm text-white mt-5">
+<footer class="footer-custom navbar navbar-expand-sm text-white mt-5  border-primary rounded-3">
   <div class="container py-2">
     <div class="row">
       <!-- About section -->
