--- a/html/header.html
+++ b/html/header.html
@@ -1,5 +1,5 @@
 <nav
-  class="header-custom navbar navbar-expand-md text-white fs-5"
+  class="header-custom navbar navbar-expand-md text-white fs-5 border-primary rounded-3"
   data-bs-theme="dark"
 >
   <!-- Container -->
