--- a/html/home.html
+++ b/html/home.html
@@ -36,68 +36,30 @@
     </div>
   </div>
 
+  <!--Szolgáltatások jellemzői-->
 
-  <!-- Content card-->
-  <div class="card text-white bg-dark my-5 py-4 text-center">
-    <div class="card-body">
-      <div class="row justify-content-center">
-        <div class="col-md-4 col-sm-6 text-center mb-3" ng-repeat="item in infoList">
-          <i class="{{item.icon}} fa-3x text-light mb-3"></i>
-          <h5 class="text-white">{{item.title}}</h5>
-          <p class="text-white text-justify m-0">{{item.description}}</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  
-  
-
-  <!-- Content Row-->
   <div class="row gx-4 gx-lg-5">
-    <div class="col-md-4 mb-5">
-      <div class="card h-100">
+    <div class="col-md-4 mb-5" ng-repeat="card in cards">
+      <div class="card h-100 text-center">
         <div class="card-body">
-          <h2 class="card-title">Card One</h2>
-          <p class="card-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni
-            quas ex numquam, maxime minus quam molestias corporis quod, ea
-            minima accusamus.
-          </p>
-        </div>
-        <div class="card-footer">
-          <a class="btn btn-primary btn-sm" href="#!">More Info</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 mb-5">
-      <div class="card h-100">
-        <div class="card-body">
-          <h2 class="card-title">Card Two</h2>
-          <p class="card-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod
-            tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt
-            quam eaque, vel, non in id dolore voluptates quos eligendi labore.
-          </p>
-        </div>
-        <div class="card-footer">
-          <a class="btn btn-primary btn-sm" href="#!">More Info</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 mb-5">
-      <div class="card h-100">
-        <div class="card-body">
-          <h2 class="card-title">Card Three</h2>
-          <p class="card-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni
-            quas ex numquam, maxime minus quam molestias corporis quod, ea
-            minima accusamus.
-          </p>
-        </div>
-        <div class="card-footer">
-          <a class="btn btn-primary btn-sm" href="#!">More Info</a>
+          <i class="{{card.icon}} fa-3x text-light mb-3"></i>
+          <h2 class="card-title">{{card.title}}</h2>
+          <p class="card-text">{{card.text}}</p>
         </div>
       </div>
     </div>
   </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
