--- a/html/footer.html
+++ b/html/footer.html
@@ -1,15 +1,60 @@
-<!-- Footer -->
-<footer class="footer-custom navbar navbar-expand-sm text-white mt-5  border-primary rounded-3">
+<!--------- Footer--------------------------->
+
+<!-----Keress-minket---------->
+<footer
+  class="footer-custom navbar navbar-expand-sm text-white mt-5 border-primary rounded-3"
+>
+  <div class="container-fluid py-2">
+    <div class="row">
+      <div class="col-md-4 mb-3">
+        <h5 class="fw-bold">{{about.title}}</h5>
+        <p class="text-justify">
+          <i ng-repeat="icon in about.icons" class="{{icon}} fa-3x me-2"></i>
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <!-------------Link-szekció------------->
+  <div class="col-md-4 mb-3">
+    <h5 class="fw-bold">Linkek</h5>
+    <p ng-repeat="link in links">
+      <i class="{{link.icon}} me-1"></i>
+      <a href="{{link.url}}" class="text-decoration-none text-white"
+        >{{link.label}}</a
+      >
+    </p>
+  </div>
+
+  <!------------Kontakt-szekció---------->
+  <div class="col-md-4 mb-3">
+    <h5 class="fw-bold">{{contact.title}}</h5>
+    <p><i class="fa-solid fa-location-dot me-2"></i>{{contact.address}}</p>
+    <p><i class="fa-solid fa-phone me-2"></i>{{contact.phone}}</p>
+    <p><i class="fa-solid fa-envelope me-2"></i>{{contact.email}}</p>
+  </div>
+
+  <!------------Footer_bottom------------>
+  <div class="row mt-4">
+    <div class="col text-center">
+      <p class="mb-0" ng-bind-html="footerBottom"></p>
+    </div>
+  </div>
+</footer>
+
+<footer
+  class="footer-custom navbar navbar-expand-sm text-white mt-5 border-primary rounded-3"
+>
   <div class="container py-2">
     <div class="row">
       <!-- About section -->
       <div class="col-md-4 mb-3">
         <h5 class="fw-bold">Rólunk</h5>
         <p class="text-justify">
-          A Super Car Wash célja, hogy autód a legjobb formáját hozza, miközben
-          te egyszerűen és gyorsan élvezheted a prémium szolgáltatásainkat.
-          Elkötelezettek vagyunk a minőség és a megbízhatóság iránt, hogy minden
-          ügyfelünk elégedetten távozzon.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias earum
+          eaque ipsa fugiat eveniet optio quas autem incidunt ex provident
+          reprehenderit corporis sunt praesentium laudantium, at doloribus est
+          neque vero ab consequuntur quibusdam repellendus? Dolores temporibus
         </p>
       </div>
 
@@ -22,7 +67,9 @@
         </p>
         <p>
           <i class="bi bi-car-front"></i
-          ><a href="#" class="text-decoration-none text-white"> Szolgáltatások</a>
+          ><a href="#" class="text-decoration-none text-white">
+            Szolgáltatások</a
+          >
         </p>
         <p>
           <i class="bi bi-info-circle-fill"></i
