--- a/html/home.html
+++ b/html/home.html
@@ -1,7 +1,5 @@
 <!-- Page Content-->
 <div class="container px-4 px-lg-5">
-
-
   <!-- Heading Row-->
   <div class="row gx-4 gx-lg-5 align-items-center my-5">
     <div class="col-lg-7">
@@ -42,9 +40,9 @@
     <div class="col-md-4 mb-5" ng-repeat="card in cards">
       <div class="card h-100 text-center">
         <div class="card-body">
-          <i class="{{card.icon}} fa-3x text-light mb-3"></i>
+          <i class="{{card.icon}} fa-3x mb-3"></i>
           <h2 class="card-title">{{card.title}}</h2>
-          <p class="card-text">{{card.text}}</p>
+          <p class="card-text text-justify">{{card.text}}</p>
         </div>
       </div>
     </div>
