--- a/html/footer.html
+++ b/html/footer.html
@@ -4,33 +4,45 @@
 <footer
   class="footer-custom navbar navbar-expand-sm text-white mt-5 border-primary rounded-3"
 >
-  <div class="container-fluid py-2">
+  <div class="container-fluid py-4">
     <div class="row">
-      <div class="col-md-4 mb-3">
+      <!-- About section -->
+      <div class="col-lg-4 col-md-6 mb-3">
         <h5 class="fw-bold">{{about.title}}</h5>
-        <p class="text-justify">
-          <i ng-repeat="icon in about.icons" class="{{icon}} fa-3x me-2"></i>
+        <div class="d-flex justify-content-start align-items-center flex-wrap">
+          <i ng-repeat="icon in about.icons" class="{{icon}} fa-2x me-3"></i>
+        </div>
+      </div>
+
+      <!-- Links section -->
+      <div class="col-lg-4 col-md-6 mb-3">
+        <h5 class="fw-bold">Linkek</h5>
+        <p ng-repeat="link in links" class="mb-1">
+          <i class="{{link.icon}} me-1"></i>
+          <a ui-sref="{{link.state}}" class="text-decoration-none text-white">
+            {{link.label}}
+          </a>
         </p>
       </div>
+
+      <!-- Contact section -->
+      <div class="col-lg-4 col-md-12 mb-3">
+        <h5 class="fw-bold">{{contact.title}}</h5>
+        <p class="mb-1">
+          <i class="fa-solid fa-location-dot me-2"></i>{{contact.address}}
+        </p>
+        <p class="mb-1">
+          <i class="fa-solid fa-phone me-2"></i>{{contact.phone}}
+        </p>
+        <p><i class="fa-solid fa-envelope me-2"></i>{{contact.email}}</p>
+      </div>
     </div>
-  </div>
 
-  <!-------------Link-szekció------------->
-  <div class="col-md-4 mb-3">
-    <h5 class="fw-bold">Linkek</h5>
-    <p ng-repeat="link in links">
-      <i class="{{link.icon}} me-1"></i>
-      <a href="{{link.url}}" class="text-decoration-none text-white"
-        >{{link.label}}</a
-      >
-    </p>
-  </div>
-
-  <!------------Kontakt-szekció---------->
-  <div class="col-md-4 mb-3">
-    <h5 class="fw-bold">{{contact.title}}</h5>
-    <p><i class="fa-solid fa-location-dot me-2"></i>{{contact.address}}</p>
-    <p><i class="fa-solid fa-phone me-2"></i>{{contact.phone}}</p>
-    <p><i class="fa-solid fa-envelope me-2"></i>{{contact.email}}</p>
+    <!-- Footer bottom -->
+    <div class="row mt-4">
+      <div class="col text-center">
+        <p class="mb-0">&copy; 2024 Super Car Wash</p>
+      </div>
+    </div>
   </div>
 </footer>
