google maps beagyazas

--- a/html/footer.html
+++ b/html/footer.html
@@ -38,6 +38,22 @@
       </div>
     </div>
 
+    <!------Google-maps-------------->
+
+    <div class="row mt-4">
+      <div class="col-md-12">
+        <iframe ng-src="{{mapUrl}}"
+                width="500"
+                height="200"
+                style="border: 0;"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+                class="border-primary rounded-3">
+        </iframe>
+      </div>
+    </div>
+
     <!-- Footer bottom -->
     <div class="row mt-4">
       <div class="col text-center">
