--- a/html/footer.html
+++ b/html/footer.html
@@ -1,13 +1,11 @@
-<!--------- Footer--------------------------->
-
-<!-----Keress-minket---------->
+<!--------- Footer------>
 <footer
   class="footer-custom navbar navbar-expand-sm text-white mt-5 border-primary rounded-3"
 >
   <div class="container-fluid py-4">
     <div class="row">
       <!-- About section -->
-      <div class="col-lg-4 col-md-6 mb-3">
+      <div class="col-lg-4 col-md-6 mb-4">
         <h5 class="fw-bold">{{about.title}}</h5>
         <div class="d-flex justify-content-start align-items-center flex-wrap">
           <i ng-repeat="icon in about.icons" class="{{icon}} fa-2x me-3"></i>
@@ -15,7 +13,7 @@
       </div>
 
       <!-- Links section -->
-      <div class="col-lg-4 col-md-6 mb-3">
+      <div class="col-lg-4 col-md-6 mb-4">
         <h5 class="fw-bold">Linkek</h5>
         <p ng-repeat="link in links" class="mb-1">
           <i class="{{link.icon}} me-1"></i>
@@ -26,38 +24,36 @@
       </div>
 
       <!-- Contact section -->
-      <div class="col-lg-4 col-md-12 mb-3">
+      <div class="col-lg-4 col-md-6 mb-4">
         <h5 class="fw-bold">{{contact.title}}</h5>
-        <p class="mb-1">
-          <i class="fa-solid fa-location-dot me-2"></i>{{contact.address}}
-        </p>
-        <p class="mb-1">
-          <i class="fa-solid fa-phone me-2"></i>{{contact.phone}}
-        </p>
-        <p><i class="fa-solid fa-envelope me-2"></i>{{contact.email}}</p>
+        <div class="d-flex align-items-center mb-2">
+          <i class="fa-solid fa-location-dot me-2"></i>
+          <p class="mb-0">{{contact.address}}</p>
+        </div>
+        <div class="d-flex align-items-center mb-2">
+          <i class="fa-solid fa-phone me-2"></i>
+          <p class="mb-0">{{contact.phone}}</p>
+        </div>
+        <div class="d-flex align-items-center">
+          <i class="fa-solid fa-envelope me-2"></i>
+          <p class="mb-0">{{contact.email}}</p>
+        </div>
       </div>
-    </div>
 
-    <!------Google-maps-------------->
-
-    <div class="row mt-4">
-      <div class="col-md-12">
-        <iframe ng-src="{{mapUrl}}"
-                width="500"
-                height="200"
-                style="border: 0;"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-                class="border-primary rounded-3">
+      <!-- Google Maps Section -->
+      <div class="col-lg-4 col-md-4 mb-3">
+        <h5 class="fw-bold">Térkép</h5>
+        <iframe
+          ng-src="{{mapUrl}}"
+          width="300"
+          height="200"
+          style="border: 0;"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+          class="text-center border-primary rounded-3"
+        >
         </iframe>
-      </div>
-    </div>
-
-    <!-- Footer bottom -->
-    <div class="row mt-4">
-      <div class="col text-center">
-        <p class="mb-0">&copy; 2024 Super Car Wash</p>
       </div>
     </div>
   </div>
