--- a/html/footer.html
+++ b/html/footer.html
@@ -2,10 +2,10 @@
 <footer
   class="footer-custom navbar navbar-expand-sm text-white mt-5 border-primary rounded-3"
 >
-  <div class="container-fluid py-4">
-    <div class="row">
+  <div class="container w-auto py-4">
+    <div class="row justify-items-center">
       <!-- About section -->
-      <div class="col-lg-4 col-md-6 mb-4">
+      <div class="col-lg-3 col-md-6 mb-4">
         <h5 class="fw-bold">{{about.title}}</h5>
         <div class="d-flex justify-content-start align-items-center flex-wrap">
           <i ng-repeat="icon in about.icons" class="{{icon}} fa-2x me-3"></i>
@@ -13,7 +13,7 @@
       </div>
 
       <!-- Links section -->
-      <div class="col-lg-4 col-md-6 mb-4">
+      <div class="col-lg-3 col-md-6 mb-4">
         <h5 class="fw-bold">Linkek</h5>
         <p ng-repeat="link in links" class="mb-1">
           <i class="{{link.icon}} me-1"></i>
@@ -24,7 +24,7 @@
       </div>
 
       <!-- Contact section -->
-      <div class="col-lg-4 col-md-6 mb-4">
+      <div class="col-lg-3 col-md-6 mb-4">
         <h5 class="fw-bold">{{contact.title}}</h5>
         <div class="d-flex align-items-center mb-2">
           <i class="fa-solid fa-location-dot me-2"></i>
@@ -41,11 +41,11 @@
       </div>
 
       <!-- Google Maps Section -->
-      <div class="col-lg-4 col-md-4 mb-3">
+      <div class="col-lg-3 col-md-4 mb-3">
         <h5 class="fw-bold">Térkép</h5>
         <iframe
           ng-src="{{mapUrl}}"
-          width="300"
+          width="400"
           height="200"
           style="border: 0;"
           allowfullscreen=""
