--- a/html/header.html
+++ b/html/header.html
@@ -175,6 +175,11 @@
                 </span>
               </a>
             </li>
+
+            <li>
+              <!--Language-selector-->
+              <ng-navbar-language></ng-navbar-language>
+            </li>
           </ul>
         </li>
       </ul>
