--- a/html/page1.html
+++ b/html/page1.html
@@ -8,7 +8,7 @@
       <input
         type="text"
         ng-model="searchQuery"
-        placeholder="Keresés szolgáltatások között..."
+        placeholder="Keresés..."
         class="form-control mb-4"
       />
     </div>
@@ -20,9 +20,9 @@
       <label for="priceFilter">Árkategória</label>
       <select ng-model="priceFilter" class="form-select">
         <option value="">Összes Árkategória</option>
-        <option value="low">Olcsóbb (0 - 10,000 Ft)</option>
-        <option value="medium">Közepes (10,000 - 20,000 Ft)</option>
-        <option value="high">Drága (20,000+ Ft)</option>
+        <option value="low">Olcsóbb (0 - 20 000 Ft)</option>
+        <option value="medium">Közepes (20 000 - 40 000 Ft)</option>
+        <option value="high">Drága (40 000+ Ft)</option>
       </select>
     </div>
   </div>
@@ -34,12 +34,12 @@
       ng-repeat="package in packages | filter:searchQuery | filter:priceFilterFn"
     >
       <div class="card">
-        <div class="card-header">{{ package.name }}</div>
+        <div class="card-header">{{ package.services_name }}</div>
         <div class="card-body">
-          <h5 class="card-title">{{ package.name }}</h5>
-          <p class="card-text">{{ package.description }}</p>
+          <h5 class="card-title">{{package.services_name}}</h5>
+          <p class="card-text">{{package.description}}</p>
           <p class="card-text text-primary">
-            <strong>{{ package.price }}</strong>
+            <strong>{{package.price}} Ft</strong>
           </p>
           <button class="btn btn-primary" ng-click="addToCart(package)">
             Megrendelem
