--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment-with-locales.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.8.3/angular-sanitize.min.js"></script>
+	<script src="./js/language-angular.js"></script>
 	<script src="./js/app-common.js"></script>
 	<script src="./js/app-form.js"></script>
 	<script src="./js/app.js"></script>
