--- a/html/page1.html
+++ b/html/page1.html
@@ -39,7 +39,7 @@
           <h5 class="card-title">{{package.services_name}}</h5>
           <p class="card-text">{{package.description}}</p>
           <p class="card-text text-primary">
-            <strong>{{package.price}} Ft</strong>
+            <strong>{{package.price}}</strong>
           </p>
           <button class="btn btn-primary" ng-click="addToCart(package)">
             Megrendelem
